<resources>
    <string name="app_name">Bet Alarm Clock</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_edit_alarm">Edit Alarm</string>
    <string name="day_monday">Mon</string>
    <string name="day_tuesday">Tue</string>
    <string name="day_wednesday">Wed</string>
    <string name="day_thusday">Thu</string>
    <string name="day_friday">Fri</string>
    <string name="day_saturday">Sat</string>
    <string name="day_sunday">Sun</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">The username should be at least 4 characters long</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="sign_up">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="username_too_short_error">This username is too short</string>
    <string name="sign_up_button">Sign up</string>
    <string name="logout">Logout</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="login_error_title">Ups!</string>
    <string name="error_toast">Sorry! Something went wrong</string>
</resources>
